ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-test
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "my_session_cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "360"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
           service:
            name: backend
            port:
              number: 5000
        - path: /
          pathType: Prefix
          backend:
           service:
            name: frontend
            port:
              number: 3000
